--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,8 @@ $blue: #4285F4;
 $red: #ea4335;
 $yellow: #fbbc05;
 $green: #34a853;
+//shadows
+$box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
 
 body {
     font-family: $font-family;
@@ -65,4 +67,19 @@ body {
         font-size: 18px;
       }
     }
+    .search {
+      height: 44px;
+      width: 584px;
+      line-height: 44px;
+      border: none;
+      border-radius: 2px;
+      box-shadow: $box-shadow;
+      margin-bottom: 30px;
+      font: 16px arial,sans-serif;
+      background:  url(https://i.imgur.com/qJaCSqq.png) 540px center;
+      background-repeat: no-repeat;
+      background-size: 24px 24px;
+      padding-left: 16px;
+    } 
+
 }
