--- a/style.css
+++ b/style.css
@@ -61,5 +61,74 @@ main.home {
     background-repeat: no-repeat;
     background-size: 24px 24px;
     padding-left: 16px; }
+  main.home button {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#f1f1f1));
+    background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+    -webkit-border-radius: 2px;
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 2px;
+    color: #757575;
+    cursor: default;
+    font-family: arial,sans-serif;
+    text-align: center; }
+    main.home button:hover {
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#f1f1f1));
+      background-image: -webkit-linear-gradient(top, #f8f8f8, #f1f1f1);
+      -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
+      background-color: #f8f8f8;
+      background-image: linear-gradient(top, #f8f8f8, #f1f1f1);
+      background-image: -o-linear-gradient(top, #f8f8f8, #f1f1f1);
+      border: 1px solid transparent;
+      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
+      color: #222; }
+    main.home button.button-default {
+      font-size: 13px;
+      font-weight: bold;
+      margin: 11px 4px;
+      min-width: 54px;
+      padding: 0 16px;
+      text-align: center;
+      height: 36px;
+      line-height: 36px; }
+    main.home button.g-search {
+      width: 126px; }
+    main.home button.lucky {
+      width: 144px; }
+  main.home .button-group {
+    width: 290px;
+    margin: 0 auto; }
+
+.footer {
+  position: absolute;
+  bottom: 1px;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  border-top: 1px solid #e4e4e4;
+  background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1); }
+  .footer ul {
+    display: inline-block;
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+    -webkit-padding-start: 40px;
+    -webkit-padding-end: 40px; }
+    .footer ul:nth-child(1) li {
+      padding-right: 15px; }
+    .footer ul:nth-child(2) {
+      float: right; }
+      .footer ul:nth-child(2) li {
+        float: right;
+        padding-left: 15px; }
+  .footer li {
+    display: inline-block; }
+    .footer li a {
+      color: #666;
+      text-decoration: none; }
+      .footer li a:hover {
+        text-decoration: underline;
+        cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
