--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,11 @@ $blue: #4285F4;
 $red: #ea4335;
 $yellow: #fbbc05;
 $green: #34a853;
+$dk-gray: #757575;
+$md-gray: #666;
+$black: #222;
+//gradients
+$g-light-gray: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
 //shadows
 $box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
 
@@ -80,6 +85,91 @@ body {
       background-repeat: no-repeat;
       background-size: 24px 24px;
       padding-left: 16px;
+    }
+    button {
+      background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));
+      background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
+      -webkit-border-radius: 2px;
+      background-color: #f2f2f2;
+      border: 1px solid #f2f2f2;
+      border-radius: 2px;
+      color: $dk-gray;
+      cursor: default;
+      font-family: arial,sans-serif;
+      text-align: center;
+      &:hover {
+        background-image: -webkit-gradient(linear,left top,left bottom,from(#f8f8f8),to(#f1f1f1));
+        background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+        -webkit-box-shadow: 0 0 0 1px rgba(0,0,0,0.2);
+        background-color: #f8f8f8;
+        background-image: linear-gradient(top,#f8f8f8,#f1f1f1);
+        background-image: -o-linear-gradient(top,#f8f8f8,#f1f1f1);
+        border: 1px solid transparent;
+        box-shadow: 0 0 0 1px rgba(0,0,0,0.2);
+        color: $black;
+      }
+      &.button-default {
+        font-size: 13px;
+        font-weight: bold;
+        margin: 11px 4px;
+        min-width: 54px;
+        padding: 0 16px;
+        text-align: center;
+        height: 36px;
+        line-height: 36px;
+      }
+      &.g-search {
+        width: 126px;
+        
+      }
+      &.lucky {
+        width: 144px;
+      }
     } 
+    .button-group {
+      width: 290px;
+      margin: 0 auto;
+    }
+}
 
+.footer {
+  position: absolute;
+  bottom: 1px;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  border-top: 1px solid #e4e4e4;
+  background-image: $g-light-gray;
+  ul {
+    display: inline-block;
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+    -webkit-padding-start: 40px;
+    -webkit-padding-end: 40px;
+    &:nth-child(1) {
+      li {
+        padding-right: 15px;
+      }
+    }
+    &:nth-child(2) {
+      float: right;
+      li {
+        float: right;
+        padding-left: 15px;
+      }
+    }
+  }
+  li {
+    display: inline-block;
+    a {
+      color: $md-gray;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
+  }
 }
